--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.50.1",
+    "react-markdown": "^10.1.0",
     "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
